--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "mongoose": "^5.3.14",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.7"
+  },
+  "devDependencies": {
+    "supertest": "^3.3.0"
   }
 }
