--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "set NODE_ENV=production&& node server.js",
-    "test": "set NODE_ENV=test&& nodemon --exec mocha --recursive -R min",
+    "test": "set NODE_ENV=test&& nodemon --exec mocha",
     "testCloud": "set NODE_ENV=testCloud&& nodemon --exec mocha --recursive -R min"
   },
   "repository": {
