Error Handeling patch

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "start": "set NODE_ENV=production&& node server.js",
+    "start": "set NODE_ENV=production&& nodemon server.js",
     "test": "set NODE_ENV=test&& nodemon --exec mocha --timeout 5000",
     "testCloud": "set NODE_ENV=testCloud&& nodemon --exec mocha --recursive"
   },
