--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "jwt-simple": "^0.5.6",
     "mocha": "^5.2.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.3.14",
     "mongoose-autopopulate": "^0.9.0",
     "morgan": "^1.9.1",
