added cors package

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/tlgaNotenboom/MtGDeckbuilderNode#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "jwt-simple": "^0.5.6",
     "mocha": "^5.2.0",
